swagger 업데이트, 테스트 결과 api 업데이트
